Added database and rendering data successfully

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,13 @@
                     </form>
                 </div>
                 <div class="task">
-                    Hrllo there
+                    <!-- <%for(i of tasks_list){
+                    %>
+
+                    <p>    <%=i.description %></p>
+                    <%
+                    } 
+                    %> -->
                 </div>
             </div>
             
